--- a/examples/activeevent.html
+++ b/examples/activeevent.html
@@ -5,19 +5,12 @@
     <meta charset="utf-8">
     <title>ScrollStory Basic</title>
     <link rel="stylesheet" href="base.css">
-    <style>
-      .story{
-        background-color: #f1f1f1;
-      }
-      .story.active{
-        background-color: #1B6F00;
-      }
-    </style>
 </head>
 
 <body>
+    <div id="status">Active item index: <span id="activeIndex"></span></div>
     <div id="container">
-        <p class="about">Most basic example: highlight active story after a scroll event.</p>
+        <p class="about">You can trigger an action when new item becomes active.</p>
         <div class="story"><span>1</span></div>
         <div class="story"><span>2</span></div>
         <div class="story"><span>3</span></div>
@@ -43,7 +36,15 @@
             'height': $(window).height() * 0.6
         });
 
-        $('#container').ScrollStory();
+        var $activeIndex = $('#activeIndex');
+
+        $('#container').ScrollStory({
+            throttleType: 'throttle', // check on leading edge of scroll
+            indexchange: function(ev, data){
+                console.log(data);
+                $activeIndex.html(data.item.index);
+            }
+        });
     })(jQuery);
     </script>
 </body>
