--- a/examples/scrollsensitivity.html
+++ b/examples/scrollsensitivity.html
@@ -5,19 +5,11 @@
     <meta charset="utf-8">
     <title>ScrollStory Basic</title>
     <link rel="stylesheet" href="base.css">
-    <style>
-      .story{
-        background-color: #f1f1f1;
-      }
-      .story.active{
-        background-color: #1B6F00;
-      }
-    </style>
 </head>
 
 <body>
     <div id="container">
-        <p class="about">Most basic example: highlight active story after a scroll event.</p>
+        <p class="about">In addition to throttle type, you can change the scroll sensitivity, which determines how to check for the active item.</p>
         <div class="story"><span>1</span></div>
         <div class="story"><span>2</span></div>
         <div class="story"><span>3</span></div>
@@ -43,7 +35,10 @@
             'height': $(window).height() * 0.6
         });
 
-        $('#container').ScrollStory();
+        $('#container').ScrollStory({
+            throttleType: 'throttle', // check on leading edge of scroll
+            scrollSensitivity: 500 // only check every 500ms during scroll. default is 100ms. Lower number may reduce performace of your app.
+        });
     })(jQuery);
     </script>
 </body>
