--- a/examples/basic.html
+++ b/examples/basic.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ScrollStory Basic</title>
+    <title>ScrollStory: Basic</title>
     <link rel="stylesheet" href="base.css">
     <style>
       .story{
