--- a/examples/basic.html
+++ b/examples/basic.html
@@ -6,10 +6,10 @@
     <title>ScrollStory: Basic</title>
     <link rel="stylesheet" href="base.css">
     <style>
-      .story{
+      .storyScroll_story{
         background-color: #f1f1f1;
       }
-      .story.active{
+      .storyScroll_story.active{
         background-color: #1B6F00;
       }
     </style>
