--- a/examples/triggeroffset.html
+++ b/examples/triggeroffset.html
@@ -3,14 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ScrollStory: Active Item</title>
+    <title>ScrollStory: Trigger Offset</title>
     <link rel="stylesheet" href="base.css">
 </head>
 
 <body>
     <div id="status">Active item index: <span id="activeIndex"></span></div>
+    <div id="trigger"></div>
     <div id="container">
-        <p class="about">You can trigger an action when new item becomes active.</p>
+        <p class="about">The trigger offset determines when an item becomes active. By default, an item does not have to pass the trigger to become active. In just has to be the closest item.</p>
         <div class="story"><span>1</span></div>
         <div class="story"><span>2</span></div>
         <div class="story"><span>3</span></div>
@@ -36,12 +37,18 @@
             'height': $(window).height() * 0.6
         });
 
+        // make trigger offset be 20% down the page,
+        // instead of the default 0px;
+        var triggerOffset = $(window).height() * 0.2;
+        $('#trigger').css({top: triggerOffset});
+        $('#status').css({top: triggerOffset-($('#status').outerHeight()/2)});
+
         var $activeIndex = $('#activeIndex');
 
         $('#container').ScrollStory({
-            throttleType: 'throttle', // check on leading edge of scroll
+            throttleType: 'throttle',
+            triggerOffset: triggerOffset,
             indexchange: function(ev, data){
-                console.log(data);
                 $activeIndex.html(data.item.index);
             }
         });
