more padding to increase page length

--- a/examples/fromdata.html
+++ b/examples/fromdata.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <title>ScrollStory: Data Attributes</title>
     <link rel="stylesheet" href="base.css">
+
+    <style>
+        .storyScroll_story{
+            padding: 10%;
+        }
+    </style>
 </head>
 
 <body>
@@ -34,7 +40,7 @@
         var items = _.map(_.range(0,12), function(){
             return {
                 hed: lorem.ipsum('w5'),
-                text: lorem.ipsum('s4')
+                text: lorem.ipsum('s11')
             };
         });
 
