--- a/demo/index.html
+++ b/demo/index.html
@@ -3,12 +3,15 @@
 	<head>
 		<title>jQuery Boilerplate</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-		<script src="../dist/jquery.scrollstory.js"></script>
+		<script src="../src/jquery.scrollstory.js"></script>
 	</head>
 	<body>
+
+		<div id="example"></div>
+
 		<script>
 			$(function() {
-				$("#element").defaultPluginName({
+				$("#example").scrollStory({
 					propertyName: "a custom value"
 				});
 			});
