addItems method added

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,16 +4,83 @@
 		<title>jQuery Boilerplate</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 		<script src="../src/jquery.scrollstory.js"></script>
+        <style>
+            #example{
+                width: 90%;
+                margin: 30px auto;
+            }
+            .example > div{
+                padding: 30px;
+            }
+        </style>
 	</head>
 	<body>
 
-		<div id="example"></div>
+		<div id="example1" class="example markup-example">
+            <h2>First List</h2>
+            <div class="story">First</div>
+            <div class="story">Second</div>
+            <div class="story">Third</div>
+            <div class="story">Fourth</div>
+            <div class="story">Fith</div>
+            <div class="story">Sixth</div>
+            <div class="story">Seventh</div>
+            <div class="story">Eight</div>
+        </div>
+
+
+        <div id="example2" class="example markup-example">
+            <h2>Second List</h2>
+            <div class="story">Josh</div>
+            <div class="story">Bob</div>
+            <div class="story">Susan</div>
+            <div class="story">Jane</div>
+            <div class="story">Craig</div>
+        </div>
+
+        <div id="example3" class="example">
+            <h2>Third List</h2>
+        </div>
+
+        <div id="example4" class="example">
+            <h2>Fourth List</h2>
+            <div class="custom">Africa</div>
+            <div class="custom">Europe</div>
+            <div class="custom">South America</div>
+        </div>
+
+        <div id="example5" class="example">
+            <h2>Fifth List</h2>
+            <div class="custom">North America</div>
+            <div class="custom">Asia</div>
+            <div class="custom">Antarctica</div>
+        </div>
 
 		<script>
 			$(function() {
-				$("#example").scrollStory({
-					propertyName: "a custom value"
-				});
+
+                // markup only
+				$(".markup-example").scrollStory({});
+
+                // data only
+                $("#example3").scrollStory({
+                    content: [{
+                        id:'first',
+                        name:'josh'
+                    }, {
+                        name:'bob'
+                    }]
+                });
+
+                // jq object
+                $("#example4").scrollStory({
+                    content: $('#example4 .custom')
+                });
+
+                // custom selection
+                $("#example5").scrollStory({
+                    content: '.custom'
+                });
 			});
 		</script>
 	</body>
