--- a/demo/index.html
+++ b/demo/index.html
@@ -81,11 +81,11 @@
                 window.example5 = $("#example5").scrollStory({
                     content: '.custom',
                     itembuild: function(ev, data){
-                        console.log('item build', ev, data);
+                        // console.log('item build', ev, data);
                     }
                 }).data('plugin_scrollStory');
 
-                console.log(example5);
+                // console.log(example5);
 
 			});
 		</script>
