--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,10 @@
                 padding: 30px;
                 min-height: 1800px;
             }
+
+            body{
+                padding-bottom: 9000px;
+            }
         </style>
 	</head>
 	<body>
