--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 
-<!-- 		<div id="example1" class="example markup-example">
+		<div id="example1" class="example markup-example">
             <h2>First List</h2>
             <div class="story">First</div>
             <div class="story">Second</div>
@@ -54,7 +54,7 @@
             <div class="custom">Africa</div>
             <div class="custom" id="europe">Europe</div>
             <div class="custom">South America</div>
-        </div> -->
+        </div>
 
         <div id="example5" class="example">
             <h2>Fifth List</h2>
