added precent based scroll and trigger offsets

--- a/demo/trigger-offset.html
+++ b/demo/trigger-offset.html
@@ -34,10 +34,17 @@
         $('#status').hide();
         $('.story').css({'height': $(window).height() * 0.6 });
 
-        $('.stories').scrollStory({
+        var scrollStory = window.SS = $('.stories').scrollStory({
             debug: true,
-            triggerOffset: 30
-        });
+            triggerOffset: '30%',
+            itembuild: function(ev, item) {
+                if (item.index == 4) {
+                    item.scrollOffset = '30%';
+                }
+            },
+            // triggerOffset: 30
+        }).data('plugin_scrollStory');
+
     })(jQuery);
     </script>
 </body>
